--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -36,8 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvTitle"
-            android:ellipsize="end"
-            android:maxLines="5"/>
+            android:ellipsize="end"/>
 
 
     </RelativeLayout>
