Endless scrolling and UI
User Stories:
1. Improved UI using material colors and fixed alignments and padding.
2. Added endless scrolling capability.

--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -37,6 +37,7 @@
         android:id="@+id/rvNewsGrid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorDivider"
         android:layout_below="@+id/etSearch"/>
 
 </RelativeLayout>
