--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -7,8 +7,9 @@
         android:id="@+id/tvBeginDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_marginTop="20dp"
         android:text="@string/beginDate" />
 
@@ -17,33 +18,36 @@
         android:layout_below="@id/tvBeginDate"
         android:layout_width="wrap_content"
         tools:text="2017-08-21"
-        android:layout_alignStart="@+id/tvBeginDate"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tvSortOrder"
         android:layout_width="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/tvBeginDateSelected"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/tvBeginDateSelected"
         android:layout_marginTop="20dp"
         android:text="@string/sortOrder" />
 
     <Spinner
         android:id="@+id/spSortOrder"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvSortOrder"
-        android:layout_marginStart="34dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/tvSortOrder" />
 
     <TextView
         android:id="@+id/tvCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/tvSortOrder"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/spSortOrder"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:text="@string/newsDeskValues" />
 
     <CheckBox
@@ -76,6 +80,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cbNewsdesk3"
         android:layout_marginTop="20dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/colorIcons"
         android:text="@string/save" />
 
 </RelativeLayout>
