Tool bar search and Sharing
User Stories:
1. Changed search to be part of the tool bar.
2. Added Tool bar to Article Activity to allow users to share articles.
3. Added Heterogenous views to the StaggeredGridViewLayoutManager.
4. Other minor UI improvements including padding and color changes.

--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -9,35 +9,10 @@
     tools:showIn="@layout/activity_search">
 
 
-    <EditText
-        android:id="@+id/etSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="14dp"
-        android:ems="10"
-        android:hint="@string/hintsearch"
-        android:inputType="textPersonName"
-        tools:text="Name" />
-
-    <Button
-        android:id="@+id/btnSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_alignTop="@+id/etSearch"
-        android:layout_toEndOf="@+id/etSearch"
-        android:layout_alignBottom="@+id/etSearch"
-        android:onClick="onSearchClick"
-        android:text="@string/search" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvNewsGrid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorDivider"
-        android:layout_below="@+id/etSearch"/>
+        android:background="@color/colorDivider" />
 
 </RelativeLayout>
