--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -2,14 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.projects.cdharini.extraextra.activities.SearchActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    <item android:id="@+id/action_search"
+          android:title="@string/search"
+          android:icon="@android:drawable/ic_menu_search"
+          app:showAsAction="always|collapseActionView"
+          app:actionViewClass="android.support.v7.widget.SearchView" />
     <item
         android:id="@+id/action_filter"
-        android:title="Filter"
+        android:title="@string/filter"
+        android:orderInCategory="2"
         android:icon="@drawable/ic_filter_list_black_24dp"
         app:showAsAction="always"
         />
