Lambda expressions and code cleanup

--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.projects.cdharini.extraextra.activities.ArticleActivity">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="com.projects.cdharini.extraextra.activities.ArticleActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,10 +21,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/wvArticle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+    <WebView xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/wvArticle"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
