--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -20,6 +20,7 @@
         tools:text="2017-08-21"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:layout_height="wrap_content"/>
 
     <TextView
